--- a/OsmAnd/res/layout-land/street_name_widget.xml
+++ b/OsmAnd/res/layout-land/street_name_widget.xml
@@ -35,12 +35,14 @@
 			android:layout_height="@dimen/map_widget_height"
 			android:scaleType="fitCenter" />
 
-		<androidx.appcompat.widget.AppCompatImageView
-			android:id="@+id/map_shield_icon"
-			android:layout_width="@dimen/dialog_button_ex_height"
+		<LinearLayout
+			android:id="@+id/map_shields_container"
+			android:layout_width="wrap_content"
 			android:layout_height="match_parent"
-			android:scaleType="fitCenter"
-			tools:src="@drawable/h_white_pillow_2_road_shield" />
+			android:layout_gravity="center"
+			android:gravity="center"
+			android:orientation="horizontal">
+		</LinearLayout>
 
 		<FrameLayout
 			android:layout_width="wrap_content"
