--- a/OsmAnd/res/layout/fragment_delete_backup_account.xml
+++ b/OsmAnd/res/layout/fragment_delete_backup_account.xml
@@ -74,8 +74,7 @@
 					android:id="@+id/progress_container"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
-					android:orientation="vertical"
-					android:paddingTop="@dimen/dialog_content_margin">
+					android:orientation="vertical">
 
 					<me.zhanghai.android.materialprogressbar.MaterialProgressBar
 						android:id="@+id/progress_bar"
@@ -83,42 +82,14 @@
 						android:layout_width="match_parent"
 						android:layout_height="4dp"
 						android:layout_marginHorizontal="@dimen/content_padding"
-						android:layout_marginBottom="@dimen/content_padding_small_half"
+						android:layout_marginTop="@dimen/dialog_content_margin"
+						android:layout_marginBottom="@dimen/content_padding"
 						android:indeterminate="false"
+						android:max="100"
+						android:progress="100"
 						osmand:mpb_progressStyle="horizontal"
 						osmand:mpb_setBothDrawables="true"
 						osmand:mpb_useIntrinsicPadding="false" />
-
-					<LinearLayout
-						android:layout_width="match_parent"
-						android:layout_height="wrap_content"
-						android:layout_marginHorizontal="@dimen/content_padding"
-						android:layout_marginVertical="@dimen/content_padding_small"
-						android:orientation="horizontal">
-
-						<net.osmand.plus.widgets.TextViewEx
-							style="@style/TitleStyle"
-							android:layout_width="0dp"
-							android:layout_height="wrap_content"
-							android:layout_weight="1"
-							android:text="@string/shared_string_progress"
-							android:textColor="?android:textColorPrimary" />
-
-						<net.osmand.plus.widgets.TextViewEx
-							android:id="@+id/percentage"
-							android:layout_width="0dp"
-							android:layout_height="wrap_content"
-							android:layout_weight="1"
-							android:gravity="end"
-							android:lineSpacingMultiplier="@dimen/text_button_letter_spacing"
-							android:textColor="?android:textColorSecondary"
-							android:textSize="@dimen/default_list_text_size"
-							osmand:typeface="@string/font_roboto_regular"
-							tools:text="25%" />
-
-					</LinearLayout>
-
-					<include layout="@layout/simple_divider_item" />
 
 					<net.osmand.plus.widgets.TextViewEx
 						android:id="@+id/progress_description"
